--- a/code/app/andriod/Laundry/res/layout/chart_fragment.xml
+++ b/code/app/andriod/Laundry/res/layout/chart_fragment.xml
@@ -36,75 +36,87 @@
             android:textSize="25sp" />
     </RelativeLayout>
 
-    <LinearLayout
+    <ScrollView
+        android:id="@+id/scrollView1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:orientation="vertical" >
+        android:layout_height="wrap_content" >
 
-        <ListView
-            android:id="@+id/chart_list"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
-        </ListView>
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/LinearLayout1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="right"
-        android:orientation="horizontal"
-        android:padding="10dp" >
-
-        <TextView
-            android:id="@+id/chart_tatolCnt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="3"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textColor="@color/black"
-            android:textSize="@dimen/content_font_size" />
-
-        <TextView
-            android:id="@+id/chart_tatolPrice"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="件物品，总计："
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textColor="@color/black"
-            android:textSize="@dimen/content_font_size" />
-
-        <TextView
-            android:id="@+id/chart_submit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right"
-            android:text="￥466.00"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textColor="@color/focuscolor"
-            android:textSize="@dimen/content_font_size" />
-    </LinearLayout>
- 
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginBottom="50dp"
-        android:layout_marginTop="5dp"
-        android:paddingLeft="30dp"
-        android:paddingRight="30dp" >
-
-        <Button
-            android:id="@+id/user_mark_manage_addbtn"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            android:background="@drawable/common_btn"
-            android:text="下一步"
-            android:textColor="@color/white"
-            android:textSize="@dimen/content_font_size" />
-    </RelativeLayout>
+            android:orientation="vertical" >
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical" >
+
+                <ListView
+                    android:id="@+id/chart_list"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" >
+                </ListView>
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/LinearLayout1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:layout_marginRight="20dp"
+                android:orientation="horizontal"
+                android:padding="10dp" >
+
+                <TextView
+                    android:id="@+id/chart_tatolCnt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="3"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/content_font_size" />
+
+                <TextView
+                    android:id="@+id/chart_tatolPrice"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="件物品，总计："
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/content_font_size" />
+
+                <TextView
+                    android:id="@+id/chart_submit"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="right"
+                    android:text="￥466.00"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:textColor="@color/focuscolor"
+                    android:textSize="@dimen/content_font_size" />
+            </LinearLayout>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginBottom="50dp"
+                android:layout_marginTop="5dp"
+                android:paddingLeft="30dp"
+                android:paddingRight="30dp" >
+
+                <Button
+                    android:id="@+id/user_mark_manage_addbtn"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_centerHorizontal="true"
+                    android:layout_centerVertical="true"
+                    android:background="@drawable/common_btn"
+                    android:text="下一步"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/content_font_size" />
+            </RelativeLayout>
+        </LinearLayout>
+
+    </ScrollView>
 
 </LinearLayout>
