--- a/code/app/andriod/Laundry/res/values/color.xml
+++ b/code/app/andriod/Laundry/res/values/color.xml
@@ -7,11 +7,11 @@
 	<color name="yellow">#FFFF00</color><!--黄色 -->
 	<color name="tabbarback">#E9EAED</color>
 
-	<color name="themecolor">#48B805</color> <!--主题 鲜绿色 （72,184,5）-->
-	
+	<!-- <color name="themecolor">#48B805</color> 主题 鲜绿色 （72,184,5） -->
+	<color name="themecolor">#F6AB00</color> <!-- 主题 橘黄色，与icon保持一致（246,171,0） -->
 	<color name="presscolor">#D25000</color><!-- button按下颜色 -->
 	<color name="disablcolor">#FF8400</color><!-- button禁用颜色 -->
 	
 	<color name="backcolor">#E7E6E3</color>  <!-- 背景墙纸颜色 -->
-	<color name="focuscolor">#0378FF</color> <!-- nav 选中字体颜色 -->
+	<color name="focuscolor">#FF643F</color> <!-- nav 选中字体颜色 -->
 	</resources>
