--- a/code/app/andriod/Laundry/res/values/styles.xml
+++ b/code/app/andriod/Laundry/res/values/styles.xml
@@ -30,4 +30,9 @@
  
     </style> 
 
+    <style name="WheelDemoTheme.Light" parent="android:Theme.Light">
+    </style>
+    <style name="WheelDemoTheme" parent="android:Theme">
+    </style>
+
 </resources>
