--- a/code/app/ios/Laundry/Laundry/Base.lproj/Main.storyboard
+++ b/code/app/ios/Laundry/Laundry/Base.lproj/Main.storyboard
@@ -194,11 +194,42 @@
                         <outlet property="adImageCollectionView" destination="p9m-ls-cHf" id="AsN-hI-mGC"/>
                         <outlet property="functionCollectionView" destination="c31-Pe-XKJ" id="P7n-S8-UJw"/>
                         <outlet property="pageIndicate" destination="dRf-rs-3zI" id="nIb-Hp-w0M"/>
+                        <segue destination="Vca-pb-3Ks" kind="show" identifier="joinSegue" id="3BY-cK-1xc"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xfV-S6-ot1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1514" y="-81"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="8xb-BG-fCa">
+            <objects>
+                <viewController hidesBottomBarWhenPushed="YES" id="Vca-pb-3Ks" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="UiZ-ec-3IZ"/>
+                        <viewControllerLayoutGuide type="bottom" id="tCl-Zx-XBN"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="snY-om-g9Y">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="home_join_info" translatesAutoresizingMaskIntoConstraints="NO" id="ZaZ-ya-SSr">
+                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="ZaZ-ya-SSr" secondAttribute="trailing" id="8gW-KB-bjg"/>
+                            <constraint firstAttribute="bottom" secondItem="ZaZ-ya-SSr" secondAttribute="bottom" id="I8S-Kb-GZ5"/>
+                            <constraint firstItem="ZaZ-ya-SSr" firstAttribute="top" secondItem="UiZ-ec-3IZ" secondAttribute="bottom" id="apc-nC-sgz"/>
+                            <constraint firstItem="ZaZ-ya-SSr" firstAttribute="leading" secondItem="snY-om-g9Y" secondAttribute="leading" id="kab-4O-2Gc"/>
+                        </constraints>
+                    </view>
+                    <nil key="simulatedBottomBarMetrics"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="HiG-5l-eQR" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2227" y="-784"/>
         </scene>
         <!--Select CategoryVC-->
         <scene sceneID="ALY-Fr-AsC">
@@ -232,7 +263,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="150" height="80"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" tag="2" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="home_warring" translatesAutoresizingMaskIntoConstraints="NO" id="L1J-t5-Wzd">
+                                                <imageView userInteractionEnabled="NO" tag="2" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="L1J-t5-Wzd">
                                                     <rect key="frame" x="5" y="5" width="70" height="70"/>
                                                 </imageView>
                                                 <imageView userInteractionEnabled="NO" tag="3" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="checkbox_off" translatesAutoresizingMaskIntoConstraints="NO" id="m2X-yi-oSN">
@@ -306,7 +337,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="13b-JN-Zhj" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2234" y="-672"/>
+            <point key="canvasLocation" x="2227" y="-81"/>
         </scene>
         <!--Modify InfoVC-->
         <scene sceneID="XrC-Lp-XOw">
@@ -496,7 +527,7 @@
             </objects>
             <point key="canvasLocation" x="2904" y="-73"/>
         </scene>
-        <!--Root View Controller-->
+        <!--SettingVC-->
         <scene sceneID="BKC-RP-i7N">
             <objects>
                 <tableViewController id="e6n-zU-L2Q" customClass="FESettingVC" sceneMemberID="viewController">
@@ -507,6 +538,42 @@
                         <sections>
                             <tableViewSection id="B9a-kn-eby">
                                 <cells>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" textLabel="L2Q-sh-HeU" style="IBUITableViewCellStyleDefault" id="Rx6-x6-9EZ">
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Rx6-x6-9EZ" id="m0f-zl-v8v">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="快客介绍" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="L2Q-sh-HeU">
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="Vca-pb-3Ks" kind="show" id="0Ba-QS-kxH"/>
+                                        </connections>
+                                    </tableViewCell>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" textLabel="qrX-ru-AIR" style="IBUITableViewCellStyleDefault" id="5n3-cZ-Uso">
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="5n3-cZ-Uso" id="jHT-N6-i6h">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="加入我们" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="qrX-ru-AIR">
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="Vca-pb-3Ks" kind="show" id="y9a-xc-h00"/>
+                                        </connections>
+                                    </tableViewCell>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" textLabel="gMm-Lg-F6d" style="IBUITableViewCellStyleDefault" id="cpr-Rh-COV">
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="cpr-Rh-COV" id="42o-fc-bCA">
@@ -529,7 +596,7 @@
                             <outlet property="delegate" destination="e6n-zU-L2Q" id="hFG-Y7-wAB"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Root View Controller" id="sKY-18-eoI"/>
+                    <navigationItem key="navigationItem" id="sKY-18-eoI"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="v18-Ue-Hft" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -950,18 +1017,45 @@
         <scene sceneID="BRO-UH-6M1">
             <objects>
                 <tableViewController id="V3y-fa-Jv4" customClass="FEOrderDetailVC" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="ZuA-N0-pnF">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="45" sectionHeaderHeight="10" sectionFooterHeight="10" id="ZuA-N0-pnF">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="M2f-8X-VKp">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="orderInfoCell" id="m6p-1K-8NS">
                                 <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="M2f-8X-VKp" id="aSi-Ne-sE3">
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="m6p-1K-8NS" id="c1w-cr-Lp9">
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="取衣地址" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FLa-DR-eLc">
+                                            <rect key="frame" x="15" y="0.0" width="80" height="44"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="80" id="2Xn-Th-GJD"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" tag="2" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vj2-yA-E27">
+                                            <rect key="frame" x="95" y="0.0" width="500" height="44"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.5" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="trailing" secondItem="vj2-yA-E27" secondAttribute="trailing" constant="5" id="0Uf-Dy-jqV"/>
+                                        <constraint firstItem="FLa-DR-eLc" firstAttribute="leading" secondItem="c1w-cr-Lp9" secondAttribute="leading" constant="15" id="Fua-nq-Un9"/>
+                                        <constraint firstAttribute="bottom" secondItem="FLa-DR-eLc" secondAttribute="bottom" id="Mh7-Cc-fAJ"/>
+                                        <constraint firstAttribute="bottom" secondItem="vj2-yA-E27" secondAttribute="bottom" id="abq-m3-Eec"/>
+                                        <constraint firstItem="vj2-yA-E27" firstAttribute="top" secondItem="c1w-cr-Lp9" secondAttribute="top" id="bQt-9n-ZMo"/>
+                                        <constraint firstItem="vj2-yA-E27" firstAttribute="leading" secondItem="FLa-DR-eLc" secondAttribute="trailing" id="diV-iz-6aN"/>
+                                        <constraint firstItem="FLa-DR-eLc" firstAttribute="top" secondItem="c1w-cr-Lp9" secondAttribute="top" id="zuO-zc-Lyh"/>
+                                    </constraints>
                                 </tableViewCellContentView>
                             </tableViewCell>
                         </prototypes>
+                        <sections/>
                         <connections>
                             <outlet property="dataSource" destination="V3y-fa-Jv4" id="oQ1-Hb-756"/>
                             <outlet property="delegate" destination="V3y-fa-Jv4" id="lgJ-q9-Wlz"/>
@@ -1483,7 +1577,7 @@
                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="personal_bkg" translatesAutoresizingMaskIntoConstraints="NO" id="IWT-ca-Nz3">
                                     <rect key="frame" x="0.0" y="0.0" width="600" height="150"/>
                                 </imageView>
-                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Pj0-kV-3sS">
+                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="default_head" translatesAutoresizingMaskIntoConstraints="NO" id="Pj0-kV-3sS">
                                     <rect key="frame" x="30" y="45" width="60" height="60"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="60" id="unC-oc-Jiq"/>
@@ -1514,7 +1608,7 @@
                             <rect key="frame" x="0.0" y="130" width="600" height="420"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <subviews>
-                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="home_warring" translatesAutoresizingMaskIntoConstraints="NO" id="2RH-6O-YLk">
+                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="default_head" translatesAutoresizingMaskIntoConstraints="NO" id="2RH-6O-YLk">
                                     <rect key="frame" x="260" y="100" width="80" height="80"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="80" id="QdX-hB-BWb"/>
@@ -1612,6 +1706,7 @@
                     <connections>
                         <outlet property="headerView" destination="ing-f8-BJJ" id="1XF-pf-Ajv"/>
                         <outlet property="shouldSigninView" destination="NFc-GG-ueC" id="k71-pg-aze"/>
+                        <outlet property="userNameLabel" destination="bNW-9l-f2r" id="v7N-kl-Arb"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="LwN-OU-Sl4" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -1719,7 +1814,8 @@
     </scenes>
     <resources>
         <image name="checkbox_off" width="14" height="14"/>
-        <image name="home_warring" width="64" height="64"/>
+        <image name="default_head" width="160" height="160"/>
+        <image name="home_join_info" width="360" height="565"/>
         <image name="item_del_icon_normal" width="24" height="24"/>
         <image name="item_del_icon_pressed" width="24" height="24"/>
         <image name="my_order" width="25" height="25"/>
@@ -1727,6 +1823,7 @@
         <image name="personal_bkg" width="360" height="187"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="5jw-CL-GwX"/>
+        <segue reference="zDU-fa-yqm"/>
+        <segue reference="y9a-xc-h00"/>
     </inferredMetricsTieBreakers>
 </document>
