--- a/code/app/andriod/Laundry/res/layout/tabbar_item_view.xml
+++ b/code/app/andriod/Laundry/res/layout/tabbar_item_view.xml
@@ -8,8 +8,9 @@
     <ImageView
         android:id="@+id/imageview"
         android:layout_width="wrap_content"
-        android:layout_height="30dp"
+        android:layout_height="25dp"
         android:layout_gravity="center"
+        android:layout_marginTop="5dp"
         android:focusable="false"
         android:padding="3dp"
         android:src="@drawable/tab_icon_home" >
