--- a/code/app/andriod/Laundry/res/layout/order_confirm_item.xml
+++ b/code/app/andriod/Laundry/res/layout/order_confirm_item.xml
@@ -1,15 +1,16 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="@drawable/common_item" >
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
+            android:layout_centerVertical="true"
+            android:layout_marginBottom="10dp"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
-            android:layout_marginTop="5dp" >
+            android:layout_marginTop="10dp" >
 
             <TextView
                 android:id="@+id/item_btntype_name"
@@ -37,7 +38,8 @@
                     android:layout_centerVertical="true"
                     android:text="修改"
                     android:textColor="@color/blue_light"
-                    android:textSize="12sp" />
+                    android:textSize="12sp"
+                    android:visibility="gone" />
 
                 <TextView
                     android:id="@+id/item_btntype_value"
@@ -48,6 +50,13 @@
                     android:text="订单信息详情qi八九十一二三"
                     android:textColor="@color/black"
                     android:textSize="12dp" />
+
+                <ImageView
+                    android:id="@+id/imageView1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:src="@drawable/user_do_task_normal" />
 
             </RelativeLayout>
 
