--- a/code/app/andriod/Laundry/res/layout/order_confirm_largetext_item.xml
+++ b/code/app/andriod/Laundry/res/layout/order_confirm_largetext_item.xml
@@ -4,7 +4,7 @@
     android:background="@color/backcolor" >
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="5dp"
             android:layout_marginLeft="20dp"
@@ -25,7 +25,8 @@
                     android:layout_centerVertical="true"
                     android:text="修改"
                     android:textColor="@color/blue_light"
-                    android:textSize="12sp" />
+                    android:textSize="12sp"
+                    android:visibility="gone" />
 
                 <TextView
                     android:id="@+id/item_btntype_name"
